--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "anniediscord.github.io",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://anniediscord.github.io",
   "dependencies": {
     "@material-ui/core": "^4.4.1",
     "contentful": "^7.9.1",
+    "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.2",
@@ -14,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
