--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-highlight.js": "^1.0.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1"
   },
@@ -34,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.3"
   }
 }
